--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
   "scripts": {
     "build": "tsc && chmod +x dist/index.js",
     "start": "npm run build && node dist/index.js",
-    "dev": "tsc --watch & node --watch dist/index.js",
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy",
     "test": "npm run build && node test-server.js",
     "clean": "rm -rf dist",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.5.0",
+    "@modelcontextprotocol/sdk": "^1.13.1",
     "js-yaml": "^4.1.0",
     "swagger-parser": "^10.0.3",
-    "openapi-types": "^12.1.3"
+    "openapi-types": "^12.1.3",
+    "agents": "^0.0.109",
+    "wrangler": "^4.22.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.0",
